--- a/Parcial1-d/index.html
+++ b/Parcial1-d/index.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>MANTECH</title>
+    
 </head>
 <body>
     <header class="text-center p-3 bg-dark text-white">
@@ -17,12 +18,38 @@
         </nav>
     </header>
 
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="img/laptops.webp" class="d-block w-100" alt="Java">
+            </div>
+            <div class="carousel-item">
+                <img src="img/pcclean.webp" class="d-block w-100" alt="C#">
+            </div>
+            <div class="carousel-item">
+                <img src="img/scameras.webp" class="d-block w-100" alt="Rust">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 
     <section class="offers container">
         <div class="row">
             <div class="col-md-4">
                 <div class="offer-card card">
-                    <img src="/img/pcclean.webp" class="card-img-top" alt="">
+                    <img src="img/pcclean.webp" class="card-img-top" alt="">
                     <div class="card-body">
                         <h5 class="card-title">Oferta 1</h5>
                         <p class="card-text">Limpieza de computadoras software y hardware</p>
@@ -32,7 +59,7 @@
             </div>
             <div class="col-md-4">
                 <div class="offer-card card">
-                    <img src="/img/scameras.webp" class="card-img-top" alt="">
+                    <img src="img/scameras.webp" class="card-img-top" alt="">
                     <div class="card-body">
                         <h5 class="card-title">Oferta 2</h5>
                         <p class="card-text">Instalacion de camaras de seguridad</p>
@@ -42,7 +69,7 @@
             </div>
             <div class="col-md-4">
                 <div class="offer-card card">
-                    <img src="/img/laptops.webp" class="card-img-top" alt="">
+                    <img src="img/laptops.webp" class="card-img-top" alt="">
                     <div class="card-body">
                         <h5 class="card-title">Oferta 3</h5>
                         <p class="card-text">Limpieza y reparacion de laptops</p>
@@ -75,5 +102,6 @@
     <footer class="footer">
         <p>&copy; developed by Denis Vasquez.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
