--- a/Parcial1-d/index.html
+++ b/Parcial1-d/index.html
@@ -26,10 +26,10 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/laptops.webp" class="d-block w-100" alt="Java">
+                <img src="img/laptop.webp" class="d-block w-100" alt="Java">
             </div>
             <div class="carousel-item">
-                <img src="img/pcclean.webp" class="d-block w-100" alt="C#">
+                <img src="img/cleanpc.webp" class="d-block w-100" alt="C#">
             </div>
             <div class="carousel-item">
                 <img src="img/scameras.webp" class="d-block w-100" alt="Rust">
@@ -49,7 +49,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="offer-card card">
-                    <img src="img/pcclean.webp" class="card-img-top" alt="">
+                    <img src="img/cleanpc.webp" class="card-img-top" alt="">
                     <div class="card-body">
                         <h5 class="card-title">Oferta 1</h5>
                         <p class="card-text">Limpieza de computadoras software y hardware</p>
@@ -69,7 +69,7 @@
             </div>
             <div class="col-md-4">
                 <div class="offer-card card">
-                    <img src="img/laptops.webp" class="card-img-top" alt="">
+                    <img src="img/laptop.webp" class="card-img-top" alt="">
                     <div class="card-body">
                         <h5 class="card-title">Oferta 3</h5>
                         <p class="card-text">Limpieza y reparacion de laptops</p>
